# zkllvm-template

./: .gitignore  CMakeLists.txt
scripts/: ci.sh
src/: build.sh
src/arithmetics_add/: CMakeLists.txt  arithmetics_add_input.json  arithmetics_add_test.cpp
src/arithmetics_mul/: CMakeLists.txt  arithmetics_mul.inp  arithmetics_mul_input.json  arithmetics_mul_test.cpp
src/binary/: CMakeLists.txt  binary.inp  binary_input.json  binary_readme.txt  binary_test.cpp
src/charcpp/: CMakeLists.txt  charcpp.inp  charcpp_input.json  charcpp_readme.txt  charcpp_test.cpp
src/charcpp_array/: CMakeLists.txt  charcpp_array_input.json  charcpp_array_readme.txt  charcpp_array_test.cpp
src/data_structures/: data_structures_test.cpp  deque.hpp  linked_list.hpp  map.hpp  queue.hpp  set.hpp  unit_tests.hpp  vector.hpp
src/for_loop/: CMakeLists.txt  for_loop_test.cpp
src/globals/: CMakeLists.txt  globals_input.json  globals_readme.txt  globals_test.cpp
src/integer/: CMakeLists.txt  integer.inp  integer_input.json  integer_test.cpp
src/main/: CMakeLists.txt
src/mutable_globals_10/: CMakeLists.txt  mutable_globals_10_test.cpp
src/mutable_globals_2/: CMakeLists.txt  mutable_globals_2_test.cpp
src/mutable_globals_3/: CMakeLists.txt  mutable_globals_3_input.json  mutable_globals_3_test.cpp
src/mutable_globals_4/: CMakeLists.txt  mutable_globals_4_test.cpp
src/mutable_globals_5/: CMakeLists.txt  mutable_globals_5_test.cpp
src/mutable_globals_6/: CMakeLists.txt  mutable_globals_6_test.cpp
src/mutable_globals_7/: CMakeLists.txt  mutable_globals_7_test.cpp  mutable_globals_readme.txt
src/mutable_globals_8/: CMakeLists.txt  mutable_globals_8_test.cpp
src/mutable_globals_9/: CMakeLists.txt  mutable_globals_9_test.cpp
src/no_IO_in_wrapper/: CMakeLists.txt  no_IO_in_wrapper_input.json  no_IO_in_wrapper_readme.txt  no_IO_in_wrapper_test.cpp
src/perceptron/: CMakeLists.txt  perceptron_test.cpp
src/ptr/: CMakeLists.txt  ptr_input.json  ptr_readme.txt  ptr_test.cpp
src/svm5/: CMakeLists.txt  svm5_input.json  svm5_test.cpp
(+9 files in other folders)
